[gd_scene load_steps=25 format=3 uid="uid://d1fhknnlbnafw"]

[ext_resource type="PackedScene" uid="uid://6uqhlg6628o8" path="res://scenes/system/player.tscn" id="1_cpdod"]
[ext_resource type="PackedScene" uid="uid://doqsjhvimdh2o" path="res://scenes/system/sun_system.tscn" id="1_doesi"]
[ext_resource type="Script" path="res://script/database/DataBase.gd" id="1_hno5f"]
[ext_resource type="Script" path="res://script/database/PlayerSheet.gd" id="2_a6q8k"]
[ext_resource type="Script" path="res://script/database/TimeSheet.gd" id="3_wk2h2"]
[ext_resource type="Script" path="res://script/database/SwitchSheet.gd" id="4_1swrh"]
[ext_resource type="Script" path="res://script/SYSTEM/SwitchSystem/SwitchSystem.gd" id="4_stu5o"]
[ext_resource type="Script" path="res://script/database/PlotSheet.gd" id="5_losx0"]
[ext_resource type="Script" path="res://script/SYSTEM/PlotSystem/PlotSystem.gd" id="6_udkse"]
[ext_resource type="PackedScene" uid="uid://doeosqkm7i4vl" path="res://assets/model/map/test_map/test_map.tscn" id="7_n2s6g"]
[ext_resource type="Curve" uid="uid://7vrfdv24ehbh" path="res://script/SYSTEM/TimeSystem/energy_curve.tres" id="7_w4bxf"]
[ext_resource type="Curve" uid="uid://bvhm0bb68xq47" path="res://script/SYSTEM/TimeSystem/angle_curve.tres" id="8_xgqm8"]
[ext_resource type="Curve" uid="uid://5eyg5xflqcxm" path="res://script/SYSTEM/TimeSystem/shadow_blur_curve.tres" id="9_mc4yv"]
[ext_resource type="Curve" uid="uid://cvfr7pi2i0fmp" path="res://script/SYSTEM/TimeSystem/shadow_transparency_curve.tres" id="10_iire7"]
[ext_resource type="Script" path="res://script/map/test_map/test_map.gd" id="12_1k222"]
[ext_resource type="Shader" uid="uid://k6erj4lpdfxr" path="res://assets/shaders/pixelized/pixelized_method1.tres" id="13_dc21e"]
[ext_resource type="Texture2D" uid="uid://12qyvg0nh4o8" path="res://icon.svg" id="14_dkalt"]
[ext_resource type="PackedScene" uid="uid://br2vn8l87xgn4" path="res://scenes/system/dialoug.tscn" id="14_ftsfm"]
[ext_resource type="Script" path="res://script/SYSTEM/UI/UI.gd" id="15_8hg25"]
[ext_resource type="Script" path="res://script/SYSTEM/PlotSystem/Action.gd" id="16_r2f3y"]
[ext_resource type="Script" path="res://script/SYSTEM/UI/HintText.gd" id="17_q10x4"]

[sub_resource type="SystemFont" id="SystemFont_nawta"]

[sub_resource type="LabelSettings" id="LabelSettings_3hblv"]
font = SubResource("SystemFont_nawta")
font_size = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3topm"]
shader = ExtResource("13_dc21e")
shader_parameter/pixelRate = 512.0

[node name="MainWorld" type="Node3D"]

[node name="DataBase" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_hno5f")

[node name="PlayerSheet" type="Node" parent="DataBase"]
unique_name_in_owner = true
script = ExtResource("2_a6q8k")

[node name="TimeSheet" type="Node" parent="DataBase"]
unique_name_in_owner = true
script = ExtResource("3_wk2h2")

[node name="SwitchSheet" type="Node" parent="DataBase"]
unique_name_in_owner = true
script = ExtResource("4_1swrh")

[node name="PlotSheet" type="Node" parent="DataBase"]
unique_name_in_owner = true
script = ExtResource("5_losx0")

[node name="SwitchSystem" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_stu5o")

[node name="Player" parent="." instance=ExtResource("1_cpdod")]
transform = Transform3D(3.5, 0, 0, 0, 3.5, 0, 0, 0, 3.5, -5.1646, 7.51973, -5.42672)

[node name="test_map" parent="." instance=ExtResource("7_n2s6g")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("12_1k222")

[node name="SunSystem" parent="." instance=ExtResource("1_doesi")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.1048, 37.6996, 9.74445)
energy_curve = ExtResource("7_w4bxf")
energy_factor = 1.0
angle_curve = ExtResource("8_xgqm8")
shadow_blur_curve = ExtResource("9_mc4yv")
shadow_blur_factor = 1.0
shadow_transparency_curve = ExtResource("10_iire7")
shadow_transparency_factor = 1.0
dawntime_color = Color(0.145098, 0.192157, 0.207843, 1)
daytime_color = Color(0.952941, 0.952941, 0.827451, 1)
dusktime_color = Color(0.670588, 0.270588, 0.133333, 1)
nighttime_color = Color(0.0705882, 0.0705882, 0.215686, 1)
time_of_whole_day = 120.0

[node name="ShadowCaster" parent="SunSystem" index="2"]
transform = Transform3D(0.375624, 0.896592, 0.234582, -0.538162, 0.00494635, 0.842827, 0.754512, -0.442829, 0.48437, 1, 7.69132, -9.53674e-07)

[node name="PlotSystem" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_udkse")

[node name="ActionSystem" type="Node" parent="PlotSystem"]
unique_name_in_owner = true
script = ExtResource("16_r2f3y")

[node name="UI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("15_8hg25")

[node name="Dialoug" parent="UI" instance=ExtResource("14_ftsfm")]
visible = false
layout_mode = 1
offset_left = 387.0
offset_top = 891.0
offset_right = 347.0
offset_bottom = 851.0

[node name="HintText" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 1009.0
offset_top = 507.0
offset_right = 1110.0
offset_bottom = 541.0
text = "按F交互"
label_settings = SubResource("LabelSettings_3hblv")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("17_q10x4")

[node name="PixelizedShader" type="Sprite2D" parent="."]
z_index = -100
material = SubResource("ShaderMaterial_3topm")
position = Vector2(960.5, 540.5)
scale = Vector2(14.9922, 8.42969)
texture = ExtResource("14_dkalt")

[editable path="SunSystem"]
